  
- Updated NumericTextField to allow decimal numbers and only allow negative sign
  at the start of a number. (Dale Anson)  

}}}
{{{ Miscellaneous

}}}
{{{ API Changes

- new org.gjt.sp.utils.GenericGUIUtilities class, containing bits of
  org.gjt.sp.jedit.GUIUtilities suitable for the standalone TextArea
  package; all methods kept but deprecated and proxies (Eric Le Lay).

}}}
{{{ Editing

- Unicode brackets (Patch #566 - Makarius)

- Updates for objectrexx mode (Patch #585 - Jack J. Woehr)

- Mode for m4 macro processor language (Patch #586 - Jack J. Woehr)

- Drawj2d edit mode (Patch #573 - A. Vontobel)

- Rust edit mode raw string fix (Patch #575 -  Jordan Miner)

- Mode for Mavscript 2.0 (Patch #574 - A. Vontobel)

- New mode for swift (Patch #587 -  Wayne Zhang)

- New mode for Java 9 module-info.java files (Dale Anson)

- Updated CSS mode provided by AdamS (Ticket #4003 - Dale Anson)

}}}

}}}

{{{ Version 5.3.0

Thanks to Björn "Vampire" Kautler, Alan Ezust, Makarius, Jakub Holý,
Mark Corbin, Matt Galligan, Kevin Hunter Kesling, Darien Brown,
Matthieu Casanova, Sergey Mashkov, Dale Anson, Kevin Leblanc,
Marcelo Vanzin, Jordan Miner, yaraba, Marc M. Adkins, Scott McPeak,
and Eric Le Lay for contributing to this release.

{{{ Bug Fixes

- EnhancedDialog NPE fix for when there is no close shortcut assigned
  (Patch # 588 - Scott McPeak)

- JEditBuffer.isFoldEnd() was unable to detect the fold end when it was the
  last line (#3917 - Matthieu Casanova)

- More accurate wrap margin calculation (Patch#555 - Makarius)

- Fix AWT thread-safety issue in VFSManager.error(). (Marcelo Vanzin)

- Order of unsorted buffers now preserved in View.getBuffers()
  (Patch # 548 - Kevin Leblanc)

- Support for negative line spacing (Patch #535 - Makarius)

- Fix bug #3671: autodetect text file encoding in HelpViewer
  (patch #540 - Eric Le Lay)

- Fix bug #3881, non-capturing lookahead in regex search didn't work.
  (Dale Anson)
